first commit - gui e2e test

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_BASE_URL=https://www.google.com
 MALFINI_ESHOP_BASE_URL=https://shop.malfini.com/cz/cs
+JSON_PLACEHOLDER_BASE_URL=https://jsonplaceholder.typicode.com
