--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,7 +1,6 @@
 {
-  "require": ["ts-node/register"],
-  "extension": ["ts"],
-  "spec": "tests/api/**/*.spec.ts",
-  "timeout": 10000,
-  "ui": "bdd"
+  "require": ["dotenv/config"],
+  "loader": "ts-node/esm",
+  "extensions": ["ts"],
+  "timeout": 10000
 }
