--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test:fe": "npx playwright test tests/fe/guiTest.spec.ts --headed",
     "build": "tsc",
-    "test:api": "mocha --require ts-node/register --extensions ts tests/api/**/*.spec.ts --timeout 10000",
-    "test:api2": "npm run test:api -- tests/api/**/*.spec.ts",
-    "test:api:getPost": "mocha --timeout 10000 -r ts-node/register tests/getPost.spec.ts",
+    "fe:test": "npx playwright test tests/fe/googleNavigateTest.spec.ts --headed",
+    "fe:test:browser:firefox": "npx playwright test tests/fe/parallelTests/1.spec.ts --project=Firefox --headed",
+    "fe:test:parallel": "npx playwright test tests/fe/parallelTests/*.spec.ts --headed --workers=10",
+    "fe:test:responsive": "npx playwright test tests/fe/responsiveTest/*.spec.ts --headed --workers=5",
+    "api:test": "mocha --require ts-node/register --extensions ts tests/api/**/*.spec.ts --timeout 10000",
     "report": "npx playwright show-report"
   },
   "devDependencies": {
@@ -15,13 +16,14 @@
     "@types/chai": "^5.2.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
-    "mocha": "^10.2.0",
+    "axios": "^1.9.0",
+    "mocha": "^10.8.2",
+    "mochawesome": "^7.1.3",
     "ts-mocha": "^11.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "axios": "^1.9.0",
     "chai": "^5.2.0",
     "dotenv": "^16.5.0"
   }
