--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "fe:test": "npx playwright test tests/fe/googleNavigateTest.spec.ts --headed",
+    "fe:test": "npx playwright test tests/fe/e2eTests/googleNavigateTest.spec.ts --headed",
     "fe:test:browser:firefox": "npx playwright test tests/fe/parallelTests/1.spec.ts --project=Firefox --headed",
-    "fe:test:parallel": "npx playwright test tests/fe/parallelTests/*.spec.ts --headed --workers=10",
-    "fe:test:responsive": "npx playwright test tests/fe/responsiveTest/*.spec.ts --headed --workers=5",
+    "fe:e2e:test": "npx playwright test tests/fe/e2eTests/*.spec.ts --headed --workers=10",
+    "fe:parallel:test": "npx playwright test tests/fe/parallelTests/*.spec.ts --headed --workers=10",
+    "fe:responsive:test": "npx playwright test tests/fe/responsiveTest/*.spec.ts --headed --workers=5",
     "api:test": "mocha --require ts-node/register --extensions ts tests/api/**/*.spec.ts --timeout 10000",
     "report": "npx playwright show-report"
   },
