--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_BASE_URL=https://www.google.com
-MALFINI_ESHOP_BASE_URL=https://shop.malfini.com/cz/cs
+MALFINI_ESHOP_BASE_URL=https://shop.malfini.com/cz/
 JSON_PLACEHOLDER_BASE_URL=https://jsonplaceholder.typicode.com
